--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -3,3 +3,23 @@
 @tailwind components;
 
 @tailwind utilities;
+
+h1 {
+  @apply text-5xl;
+}
+
+h2 {
+  @apply text-4xl;
+}
+
+h3 {
+  @apply text-3xl;
+}
+
+h4 {
+  @apply text-2xl;
+}
+
+.App {
+  @apply min-h-screen w-1/2 mx-auto py-5;
+}
