Add new pages, summary, style

--- a/src/App.css
+++ b/src/App.css
@@ -19,3 +19,52 @@ body {
     margin-left: 0%;
   }
 }
+
+a.bracket-active:before,
+a.bracket:before {
+  content: "[";
+  margin-right: 10px;
+  display: inline-block;
+  opacity: 0;
+  -webkit-transform: translateX(20px);
+  -moz-transform: translateX(20px);
+  transform: translateX(20px);
+  -webkit-transition: -webkit-transform 0.3s, opacity 0.2s;
+  -moz-transition: -moz-transform 0.3s, opacity 0.2s;
+  transition: transform 0.3s, opacity 0.2s;
+}
+
+a.bracket-active:after,
+a.bracket:after {
+  content: "]";
+  margin-left: 10px;
+  display: inline-block;
+  opacity: 0;
+  -webkit-transition: -webkit-transform 0.3s, opacity 0.2s;
+  -moz-transition: -moz-transform 0.3s, opacity 0.2s;
+  transition: transform 0.3s, opacity 0.2s;
+  -webkit-transform: translateX(-20px);
+  -moz-transform: translateX(-20px);
+  transform: translateX(-20px);
+}
+
+a.bracket-active:after,
+a.bracket-active:before,
+a.bracket:hover:before,
+a.bracket:hover:after {
+  opacity: 1;
+}
+
+a.bracket-active:before,
+a.bracket:hover:before {
+  -webkit-transform: translateX(4px);
+  -moz-transform: translateX(4px);
+  transform: translateX(4px);
+}
+
+a.bracket-active:after,
+a.bracket:hover:after {
+  -webkit-transform: translateX(-4px);
+  -moz-transform: translateX(-4px);
+  transform: translateX(-4px);
+}
